--- a/.github/workflows/.travis.yml
+++ b/.github/workflows/.travis.yml
@@ -8,4 +8,4 @@ git:
   lfc_skip_smudge: true
 
 script:
-    - cd srs/Main/Main && python test_module_get_pass_len.py
+    - cd srs/Main/main.py && python test_module_get_pass_len.py
